--- a/components/portfolio.css
+++ b/components/portfolio.css
@@ -32,7 +32,7 @@
     gap: 1rem;
 }
 
-/* ===== Media Queries (Medium Devices (Tablets)) ===== */
+/* Media Queries (Medium Devices (Tablets)) */
 @media screen and (max-width: 1024px) {
     .portfolio_container {
         grid-template-columns: 1fr 1fr;
@@ -40,7 +40,7 @@
     }
 }
 
-/* ===== Media Queries (Small Devices (Phones)) ===== */
+/* Media Queries (Small Devices (Phones)) */
 @media screen and (max-width: 600px) {
     .portfolio_container {
         grid-template-columns: 1fr;
